# flam-rnd-assignment

./: .gitignore  README.md
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_processing.cpp  opencv_processing.hpp
android/app/src/main/java/com/flam/edgeviewer/: CameraAnalyzer.kt  GLRenderer.kt  GLView.kt  MainActivity.kt  NativeBridge.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  styles.xml
web-viewer/: index.html  package.json  tsconfig.json
web-viewer/src/: main.ts  styles.css
